# sound-server

./: Cargo.toml  Rakefile  ReadMe.md  deploy  inventory.yml  playbook.yml  requirements.yml  run-remote  setup_camera.sh  setup_mjpeg_streamer.sh  setup_shairport.sh
roles/lxc/tasks/: main.yml
roles/shairport/tasks/: main.yml
roles/shairport/templates/: shairport-sync.conf.j2
roles/shairport/vars/: main.yml
src/: door.rs  lib.rs
src/api/: main.rs
src/door/: main.rs
src/speakers/: main.rs
