[package]
name = "garage"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
simple-signal = "1"
rppal = "0.11"
gotham = "0.3"
gotham_derive = "*"
hyper = "0.12"
futures = "*"

[lib]
name = "garage"
path = "src/lib.rs"

[[bin]]
name = "garage-speakers"
path = "src/speakers/main.rs"

[[bin]]
name = "garage-door"
path = "src/door/main.rs"
