[package]
name = "garage"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
log = "0.4"
simple-signal = "1"
linux-embedded-hal = "0.3"
rppal = "0.11"
gotham = "0.4"
gotham_derive = "0.4"
mime = "0.3"
hyper = "0.12"
futures = "0.1"
cistern = { git = "https://github.com/reitermarkus/cistern" }
serde_json = "1"

[lib]
name = "garage"
path = "src/lib.rs"

[[bin]]
name = "garage-speakers"
path = "src/speakers/main.rs"

[[bin]]
name = "garage"
path = "src/api/main.rs"
